# ChainBench-ADD

./: .gitignore  .gitmodules  LICENSE  README.md  index.html  pyproject.toml
chainbench/eval/baselines/: base.py
chainbench/stage3/: cli.py
config/: stage1_curation.json  stage2_clean_master_preparation.json  stage3_spoof_generation.json  stage4_delivery_chain_rendering.json  stage5_validation_packaging.json
scripts/: common_logging.py  stage1_source_curation.py  stage2_clean_master_preparation.py  stage3_generator_batch_runner.py  stage3_spoof_generation.py
scripts/eval/: cli.py  metrics.py  task_splits.py  tasks.py  views.py
scripts/eval/pipeline/: scheduler.py
scripts/eval/tasks/: task_keys.py
scripts/lib/: io.py
scripts/metadata/: __init__.py  task_keys.py
scripts/paper/: export_paper_stats.py
scripts/release/: fetch_chainbench_release.py  package_chainbench_release.py
scripts/stage4/: chains.py  cli.py  render.py
scripts/stage4/operators/: __init__.py  bandlimit.py  base.py  call_path.py  codec.py  noise.py  packet_loss.py  resample.py  rir.py  telephony_session.py
scripts/stage5/: cli.py  protocols.py  validate.py
