[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ChainBench"
version = "0.1.0"
description = "ChainBench data pipeline and evaluation tooling."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "huggingface_hub",
    "loguru",
    "numpy",
    "PyYAML",
    "pyroomacoustics",
    "scikit-learn",
    "scipy",
    "soundfile",
    "tqdm",
]

[project.optional-dependencies]
torch = [
    "torch",
    "torchaudio",
]

[project.scripts]
chainbench = "chainbench.cli:main"

[tool.setuptools]
packages = [
    "chainbench",
    "chainbench.eval",
    "chainbench.eval.baselines",
    "chainbench.eval.baselines.native",
    "chainbench.eval.baselines.native.aasist",
    "chainbench.eval.baselines.native.nes2net",
    "chainbench.eval.baselines.native.safeear",
    "chainbench.eval.baselines.native.sls_df",
    "chainbench.eval.metrics",
    "chainbench.eval.pipeline",
    "chainbench.eval.preservation",
    "chainbench.eval.tasks",
    "chainbench.lib",
    "chainbench.release",
    "chainbench.stage1",
    "chainbench.stage2",
    "chainbench.stage3",
    "chainbench.stage3.runner",
    "chainbench.stage4",
    "chainbench.stage4.operators",
    "chainbench.stage5",
]
